ajax_views.py fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
@@ -181,7 +181,7 @@ table, th, td {
 
                             {% else %}
                              <div align = "center">
-                             <button disabled>{{node.name}} ended {{days_left}} days back</button>
+                             <button disabled>{{node.name}} has ended</button>
                            </div>
 
                             {% endif %} 
