--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
@@ -163,8 +163,23 @@ table, th, td {
                             </div>
                           </div>
                           {% endif %}
+                          <br>
 
-                          <br><br>
+                          {% with node.html_content|safe as description %}
+                          {% if description != "None" %}
+                          <div class="row">
+                            <div class="small-3 columns">
+                              <label>Brief description about event:</label>
+                            </div>
+                            <div class="small-5 end columns">
+                              <label>
+                              {{description}}
+                                </label>
+                          {% endif %}
+                          {% endwith %}
+                            </div>
+                          </div>
+                          <br>
 
                           {% if show %}
 
@@ -190,7 +205,8 @@ table, th, td {
                            <div align = "center">
                           <button disabled>You are not invited for {{node.name}}</button>        
                           </div>  
-                          {% endif %} 
+                          {% endif %}
+
                           {% endif %}
                            
 
@@ -233,15 +249,7 @@ table, th, td {
                               </div>
                          </div>
                           {% endif %}
-                            <br>
-                          
-                          <br>
-                          {% with node.html_content|safe as description %}
-                          {% if description != "None" %}
-                          <label>Brief description about event:</label>
-                          {{ description }}
-                          {% endif %}
-                          {% endwith %}
+
                     
                     </fieldset>   
                     </section>
