--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
@@ -163,49 +163,8 @@ table, th, td {
                             </div>
                           </div>
                           {% endif %}
+
                           <br>
-
-                          {% with node.html_content|safe as description %}
-                          {% if description != "None" %}
-                          <div class="row">
-                            <div class="small-3 columns">
-                              <label>Brief description about event:</label>
-                            </div>
-                            <div class="small-5 end columns">
-                              <label>
-                              {{description}}
-                                </label>
-                          {% endif %}
-                          {% endwith %}
-                            </div>
-                          </div>
-                          <br>
-
-                          {% if show %}
-
-                            {%if active == 0%}
-
-                            <div align = "center">
-                            <button target = "_blank" onClick="window.open('{{url}}')">Join</button> 
-                          </div>
-
-                            {% elif active == -1%}
-                             <div align = "center">
-                             <button disabled>{{node.name}} will start in {{days_left}} days</button>
-                           </div>
-
-                            {% else %}
-                             <div align = "center">
-                             <button disabled>{{node.name}} has ended</button>
-                           </div>
-
-                            {% endif %} 
-
-                          {% else %}
-                           <div align = "center">
-                          <button disabled>You are not invited for {{node.name}}</button>        
-                          </div>  
-                          {% endif %}
 
                           {% endif %}
                            
@@ -249,7 +208,44 @@ table, th, td {
                               </div>
                          </div>
                           {% endif %}
+                          
+                          {% with node.html_content|safe as description %}
+                          {% if description != "None" %}
+                         <div class="small-3 columns">
+                                <label>Brief description about event:</label>
+                         </div>       
+                          <div class="small-5 end columns">
+                                <label>{{ description }}</label>
+                          </div>
+                          {% endif %}
+                          {% endwith %}
 
+
+                          {% if show %}
+
+                            {%if active == 0%}
+
+                          <div align = "center">
+                            <button target = "_blank" onClick="window.open('{{url}}')">Join</button> 
+                          </div>
+
+                            {% elif active == -1%}
+                             <div align = "center">
+                             <button disabled>{{node.name}} will start in {{days_left}} days</button>
+                           </div>
+
+                            {% else %}
+                             <div align = "center">
+                             <button disabled>{{node.name}} has ended</button>
+                           </div>
+
+                            {% endif %} 
+
+                          {% else %}
+                           <div align = "center">
+                          <button disabled>You are not invited for {{node.name}}</button>
+                          </div>  
+                          {% endif %}
                     
                     </fieldset>   
                     </section>
