--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -19,7 +19,7 @@
   }*/
 }
 
-body>footer {
+/*body>footer {
     background-color: #A0148E;
     color: #fff;
     min-height: auto;
@@ -32,7 +32,7 @@ body>footer {
       margin-right: 1.375rem;
       margin-left: 0 !important;
     }
-}
+}*/
 
 #top-headers {
 
