--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_details.html
@@ -259,7 +259,7 @@ table, th, td {
 
                           {% else %}
                            <div align = "center">
-                          <button disabled>You are not invited for {{node.name}}</button>
+                          <button disabled>For joining {{node.name}} contact the Co-ordinator</button>
                           </div>  
                           {% endif %}
 
