--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/tiss/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/tiss/styles.css
@@ -27813,3 +27813,118 @@ course-title {
   max-height: 100px;
   border: 1px solid !important;
 }
+
+/* Horizontal card */
+/* line 4506, ../../../scss/_app_styles.scss */
+.hr-card {
+  /*background: #F2F2F2;*/
+  border: 1px solid #AAA;
+  border-bottom: 3px solid #BBB;
+  padding: 0px;
+  margin: 5px;
+  overflow: hidden;
+  width: 100%;
+  height: 16rem;
+}
+/* line 4515, ../../../scss/_app_styles.scss */
+.hr-card:hover {
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.16), 0 2px 10px 1px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 0.5s ease;
+}
+/* line 4520, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-status {
+  z-index: 99;
+  width: auto;
+  top: 30px;
+  position: absolute;
+  background-color: #00b300;
+  color: white;
+}
+/* line 4533, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-title {
+  font-size: 0.8 em;
+  color: #0d0d0d;
+}
+/* line 4542, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-desc {
+  font-size: 0.7em;
+  color: #333333;
+  border-bottom: thick black;
+}
+/* line 4551, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image {
+  max-height: 12rem;
+  padding: 0px;
+  margin: 0px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+  height: 10rem;
+}
+/* line 4562, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image img {
+  border-radius: 2px 2px 0 0;
+  display: block;
+  margin: 0 auto;
+  opacity: 0.9;
+  height: 100%;
+}
+/* line 4571, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i {
+  font-size: 7rem;
+  opacity: 0.75;
+  display: block;
+  margin: -15px auto;
+  text-align: center;
+  color: gray;
+  font-family: "foundation-icons";
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-decoration: inherit;
+}
+/* line 4585, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.file:before {
+  content: "\f18e";
+}
+/* line 4588, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.page:before {
+  content: "\f18e";
+}
+/* line 4591, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.collection:before {
+  content: "\f18a";
+}
+/* line 4594, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.documents:before {
+  content: "\f18b";
+}
+/* line 4597, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.pdf:before {
+  content: "\f18b";
+}
+/* line 4600, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.text:before {
+  content: "\f18e";
+}
+/* line 4603, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.interactives:before {
+  content: "\f1b2";
+}
+/* line 4606, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.ebooks:before {
+  content: "\f11e";
+}
+/* line 4609, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.images:before {
+  content: "\f125";
+}
+/* line 4612, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.audios:before, .hr-card .hr-card-image i.audio:before {
+  content: "\f17b";
+}
+/* line 4615, ../../../scss/_app_styles.scss */
+.hr-card .hr-card-image i.videos:before, .hr-card .hr-card-image i.video:before {
+  content: "\f20e";
+}
