--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4502,3 +4502,122 @@ course-title{
   max-height:100px;
   border: 1px solid !important;
 }
+/* Horizontal card */
+.hr-card {
+    /*background: #F2F2F2;*/
+    border:1px solid #AAA;
+    border-bottom:3px solid #BBB;
+    padding:0px;
+    margin:5px;
+    overflow:hidden;
+    width:100%;
+    height:16rem;
+     &:hover{
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.16), 0 2px 10px 1px rgba(0, 0, 0, 0.12);
+    transition: box-shadow 0.5s ease;
+    }
+    
+  .hr-card-status{
+    z-index: 99;
+    width: auto;
+    //margin-right: 200px;
+    top: 30px;
+    //right: 0;
+    //vertical-align: middle;
+    position: absolute;
+    background-color: #00b300;
+    color:white;
+
+    }
+
+  .hr-card-title{
+    //padding-top: 0.5em;
+    font-size: 0.8 em;
+    color: #0d0d0d;
+    //font-weight: bold;
+    //padding-left: 10px !important;
+    
+    }
+
+  .hr-card-desc{
+    //word-wrap: break-word;
+    font-size:0.7em;
+    color:#333333;
+    //padding-left: 1px !important;
+    border-bottom: thick black;
+  }
+
+
+ .hr-card-image {
+    //width:100%;
+    max-height:12rem;
+    padding:0px;
+    margin:0px;
+    background-position:center;
+    background-repeat:no-repeat;
+    position:relative;
+    overflow:hidden;
+    height: 10rem;    
+      
+    img  {
+    border-radius: 2px 2px 0 0;
+    display: block;
+    margin: 0 auto;
+    opacity: 0.9;
+    //]width:100%;
+    height:100%;
+  }
+  
+  i {
+  font-size: 7rem;
+  opacity: 0.75;
+  display: block;
+  margin: -15px auto;
+  text-align: center;
+  color: gray;
+  font-family: "foundation-icons";
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-decoration: inherit;
+  }
+  
+  i.file:before {
+  content: "\f18e";
+  }
+  i.page:before {
+  content: "\f18e";
+  }
+  i.collection:before {
+  content: "\f18a";
+  }
+  i.documents:before {
+  content: "\f18b";
+  }
+  i.pdf:before {
+  content: "\f18b";
+  }
+  i.text:before {
+  content: "\f18e";
+  }
+  i.interactives:before {
+  content: "\f1b2";
+  }
+  i.ebooks:before {
+  content: "\f11e";
+  }
+  i.images:before {
+  content: "\f125";
+  }
+  i.audios:before, i.audio:before {
+  content: "\f17b";
+  }
+  i.videos:before, i.video:before {
+  content: "\f20e";
+  }
+
+
+}
+
+
+}
