--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/partner_showcase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/partner_showcase.html
@@ -7,7 +7,7 @@
 <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-6">
 {% for each_partner in source_partners %}
 	<li class="card-image-wrapper"> 
-		{% include 'ndf/simple_card.html' with resource=each_partner has_prof_pic=True url_name='e-library' first_arg='home' second_arg='' search_url_text='filter?selfilters=[{"or":[{"selFieldValue":"source","selFieldValueAltnames":"source","selFieldGstudioType":"attribute","selFieldText":"'|add:each_partner.name|add:'","selFieldPrimaryType":"basestring"}]}]' %}
+		{% include 'ndf/horizontal_card.html' with  tmp_source=tmp_source resource=each_partner has_prof_pic=True url_name='e-library' first_arg='home' second_arg='' search_url_text='filter?selfilters=[{"or":[{"selFieldValue":"source","selFieldValueAltnames":"source","selFieldGstudioType":"attribute","selFieldText":"'|add:each_partner.name|add:'","selFieldPrimaryType":"basestring"}]}]' %}
 	</li>
 {% endfor %}
 </ul>
