--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/nroer/styles.css
@@ -23915,26 +23915,36 @@ body > footer {
   background-color: #5d055f;
 }
 /* line 469, ../../../scss/_app_styles.scss */
+body > footer ul {
+  list-style-type: none;
+  text-decoration: none;
+}
+/* line 472, ../../../scss/_app_styles.scss */
+body > footer ul li {
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+/* line 477, ../../../scss/_app_styles.scss */
 body > footer p {
   margin: 10px;
   font-size: 18px;
 }
-/* line 473, ../../../scss/_app_styles.scss */
+/* line 481, ../../../scss/_app_styles.scss */
 body > footer h2 {
   font-size: 25px;
 }
-/* line 476, ../../../scss/_app_styles.scss */
+/* line 484, ../../../scss/_app_styles.scss */
 body > footer li {
   color: #BBBBBB;
 }
-/* line 479, ../../../scss/_app_styles.scss */
+/* line 487, ../../../scss/_app_styles.scss */
 body > footer a {
   color: #BBBBBB;
   margin-top: 0;
   padding: 0;
   display: inline;
 }
-/* line 484, ../../../scss/_app_styles.scss */
+/* line 492, ../../../scss/_app_styles.scss */
 body > footer a:hover {
   text-decoration: none;
   color: #3824a5;
@@ -23942,77 +23952,65 @@ body > footer a:hover {
   padding: 0;
   display: inline;
 }
-/* line 494, ../../../scss/_app_styles.scss */
-body > footer .myfooter ul {
-  list-style-type: none;
-  text-decoration: none;
-}
-/* line 497, ../../../scss/_app_styles.scss */
-body > footer .myfooter ul li {
-  font-size: 15px;
-  margin-bottom: 5px;
-}
-/* line 503, ../../../scss/_app_styles.scss */
-body > footer .footer-section {
+/* line 502, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer-section {
   color: #FFFFFF;
   text-align: center;
 }
-/* line 507, ../../../scss/_app_styles.scss */
-body > footer .inline_mar-right {
+/* line 506, ../../../scss/_app_styles.scss */
+body > footer .myfooter .inline_mar-right {
   display: inline-block;
   margin: 0 25px 15px 0;
 }
-/* line 512, ../../../scss/_app_styles.scss */
-body > footer .footer_content {
+/* line 511, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_content {
   margin: 20px;
 }
-/* line 515, ../../../scss/_app_styles.scss */
-body > footer .footer_link_content {
+/* line 514, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_content .footer-logo {
+  height: 65px;
+  width: 150px;
+}
+/* line 519, ../../../scss/_app_styles.scss */
+body > footer .myfooter .links_collapse {
+  max-height: 78px;
+  overflow: hidden;
+  transition: all 0.5s ease-out;
+}
+/* line 524, ../../../scss/_app_styles.scss */
+body > footer .myfooter .links_collapse ul {
+  display: inline;
+  padding: 0;
+  margin: 0px !important;
+}
+/* line 530, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_link_cont {
   display: inline-block;
   vertical-align: top;
   margin: 20px;
   text-align: left;
 }
-/* line 521, ../../../scss/_app_styles.scss */
-body > footer .links_collapse {
-  max-height: 78px;
-  overflow: hidden;
-  transition: all 0.5s ease-out;
-}
-/* line 526, ../../../scss/_app_styles.scss */
-body > footer .links_collapse ul {
-  list-style-type: none;
-  text-decoration: none;
-  display: inline;
-  padding: 0;
-  margin: 0px !important;
-}
-/* line 534, ../../../scss/_app_styles.scss */
-body > footer .links_show {
+/* line 536, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_link_cont .links_show {
   max-height: 600px;
 }
-/* line 538, ../../../scss/_app_styles.scss */
-body > footer .show_foot_links {
+/* line 540, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_link_cont .show_foot_links {
   color: #666666;
   cursor: pointer;
 }
-/* line 542, ../../../scss/_app_styles.scss */
-body > footer .show_foot_links:hover {
+/* line 544, ../../../scss/_app_styles.scss */
+body > footer .myfooter .footer_link_cont .show_foot_links:hover {
   text-decoration: underline;
 }
-/* line 546, ../../../scss/_app_styles.scss */
-body > footer .footer-logo {
-  height: 65px;
-  width: 150px;
-}
 
-/* line 552, ../../../scss/_app_styles.scss */
+/* line 553, ../../../scss/_app_styles.scss */
 .coll-arrows {
   cursor: pointer;
   display: block;
   padding: 0.5rem;
 }
-/* line 557, ../../../scss/_app_styles.scss */
+/* line 558, ../../../scss/_app_styles.scss */
 .coll-arrows:hover {
   background-color: #D3D3D3;
 }
