--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -465,7 +465,15 @@ body>footer {
   padding:10px 5px;
   position: relative;
   background-color: rgb(93, 5, 95);
-
+  
+  ul {
+    list-style-type: none;
+    text-decoration: none;
+    li {
+      font-size: 15px;
+      margin-bottom: 5px;
+    }
+  }
   p {
     margin: 10px;
     font-size: 18px;
@@ -489,63 +497,56 @@ body>footer {
       display: inline;
     }
   }
-
   .myfooter {
-    ul {
-      list-style-type: none;
-      text-decoration: none;
-      li {
-        font-size: 15px;
-        margin-bottom: 5px;
+
+    .footer-section {
+      color: #FFFFFF;
+      text-align: center;
+    }
+    .inline_mar-right {
+      display: inline-block;
+      margin: 0 25px 15px 0;
+    }
+    //Footer links
+    .footer_content {
+      margin: 20px;
+
+      .footer-logo {
+        height: 65px;
+        width: 150px;
       }
     }
-  }
-  .footer-section {
-    color: #FFFFFF;
-    text-align: center;
-  }
-  .inline_mar-right {
-    display: inline-block;
-    margin: 0 25px 15px 0;
-  }
-  //Footer links
-  .footer_content {
-    margin: 20px;
-  }
-  .footer_link_content {
-    display:inline-block;
-    vertical-align: top;
-    margin:20px;
-    text-align: left;
-  }
-  .links_collapse {
-    max-height: 78px;
-    overflow: hidden;
-    transition: all 0.5s ease-out;
+    .links_collapse {
+      max-height: 78px;
+      overflow: hidden;
+      transition: all 0.5s ease-out;
 
-    ul {
-      list-style-type: none;
-      text-decoration: none;
-      display: inline;
-      padding: 0;
-      margin: 0px !important;
+      ul {
+        display: inline;
+        padding: 0;
+        margin: 0px !important;
+      }
     }
-  }
-  .links_show {
-    //change as per requirement on addition on more links in future
-    max-height: 600px;
-  }
-  .show_foot_links {
-    color: #666666;
-    cursor: pointer;
+    .footer_link_cont {
+      display:inline-block;
+      vertical-align:top;
+      margin:20px;
+      text-align:left;
 
-    &:hover {
-      text-decoration: underline;
+      .links_show {
+        //change as per requirement on addition on more links in future
+        max-height: 600px;
+      }
+      .show_foot_links {
+        color: #666666;
+        cursor: pointer;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
-  }
-  .footer-logo {
-    height: 65px;
-    width: 150px;
+    
   }
 }
 
@@ -558,7 +559,6 @@ body>footer {
       background-color: #D3D3D3;
   }
 }
-
 
 /* Sections */
 main>article {
