--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4511,28 +4511,21 @@ course-title{
     margin:5px;
     overflow:hidden;
     width:100%;
-    height:16rem;
+    height:18rem !important;
      &:hover{
     box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.16), 0 2px 10px 1px rgba(0, 0, 0, 0.12);
     transition: box-shadow 0.5s ease;
     }
     
   .hr-card-status{
-    z-index: 99;
-    width: auto;
-    //margin-right: 200px;
-    top: 30px;
-    //right: 0;
-    //vertical-align: middle;
-    position: absolute;
-    background-color: #00b300;
-    color:white;
-
+      
+    font-size:0.6em;
+    color:gray;
     }
 
   .hr-card-title{
     //padding-top: 0.5em;
-    font-size: 0.8 em;
+    font-size: 0.7.5 em;
     color: #0d0d0d;
     //font-weight: bold;
     //padding-left: 10px !important;
